fixed mobile css as transitions caused white space overflow

--- a/style.css
+++ b/style.css
@@ -871,6 +871,10 @@ section#contact {
         margin: 0em 0em 1.5em 0em;
     }
 
+    .tech-stack img{
+        object-fit: cover;
+    }
+
 }
 
 @media screen and (max-width: 380px){
